--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bayatni.tn</title>
-  <link rel="stylesheet" href="landing.css" />
+  <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet" />
 </head>
 <body>
   <header>
     <div class="logo">Bayatni.tn</div>
     <nav>
-      <a href="/signup" class="btn-outline">S'inscrire</a>
-      <a href="/login" class="btn-primary">Se connecter</a>
+      <a href="signup.html" class="btn-outline">S'inscrire</a>
+      <a href="login.html" class="btn-primary">Se connecter</a>
     </nav>
   </header>
 
