--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bayatni.tn</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="landing.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet" />
 </head>
 <body>
