--- a/Frontend/book.html
+++ b/Frontend/book.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bayatni.tn</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet" />
 </head>
 <body>
-    
+  <header>
+    <div class="logo">Bayatni.tn</div>
+    <nav>
+      <a href="signup.html" class="btn-outline">S'inscrire</a>
+      <a href="login.html" class="btn-primary">Se connecter</a>
+    </nav>
+  </header>
+
+  <section class="hero-section">
+    <h1>Bienvenue sur Bayatni</h1>
+    <p>Votre plateforme de réservation d’agenda en ligne dédiée aux hôtels en Tunisie.</p>
+    <a href="book.html">Réserver maintenant</a>
+  </section>
+
+  <section id="features">
+    <h2>Fonctionnalités clés</h2>
+    <div class="feature-grid">
+      <a href="/reservation" class="feature-box">
+        <h3>Réservations automatisées</h3>
+        <p>Optimisez la gestion de votre planning avec notre système intelligent.</p>
+      </a>
+      <a href="/multi-utilisateur" class="feature-box">
+        <h3>Multi-utilisateur</h3>
+        <p>Attribuez des rôles à votre équipe pour un travail collaboratif.</p>
+      </a>
+      <a href="/support-local" class="feature-box">
+        <h3>Support local</h3>
+        <p>Une solution conçue spécialement pour les hôtels en Tunisie.</p>
+      </a>
+    </div>
+  </section>
+
+  <footer>
+    &copy; 2025 Bayatni.tn — Tous droits réservés.
+  </footer>
 </body>
 </html>
