--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -19,7 +19,7 @@
   <section class="hero-section">
     <h1>Bienvenue sur Bayatni</h1>
     <p>Votre plateforme de réservation d’agenda en ligne dédiée aux hôtels en Tunisie.</p>
-    <a href="/booking">Réserver maintenant</a>
+    <a href="book.html">Réserver maintenant</a>
   </section>
 
   <section id="features">
