--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -1,33 +1,34 @@
-<!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Se connecter | Bayatni.tn</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet" />
+    <meta charset="utf-8"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <title>Bayatni.tn</title>
+    <link rel="stylesheet" href="css/login.css"> 
+    <script src="https://cdn.tailwindcss.com"></script> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 </head>
 <body>
-  <header>
-    <div class="logo"><a href="index.html">Bayatni.tn</a></div>
-    <nav>
-      <a href="signup.html" class="btn-outline">S'inscrire</a>
-    </nav>
-  </header>
+        <header class="flex justify-between items-center z-10">
+            <div class="text-2xl font-bold">Bayatni.tn</div>
+        </header>
 
-  <section class="auth-section">
-    <div class="auth-card">
-      <h1>Connexion</h1>
-      <form action="/login" method="POST">
-        <input type="email" name="email" placeholder="Adresse e-mail" required />
-        <input type="password" name="password" placeholder="Mot de passe" required />
-        <button type="submit" class="btn-primary full-width">Se connecter</button>
-      </form>
-    </div>
-  </section>
-
-  <footer>
-    &copy; 2025 Bayatni.tn — Tous droits réservés.
-  </footer>
+        <section class="auth-section">
+            <div class="auth-card">
+              <h1>Connexion</h1>
+              <form action="/login" method="POST">
+                <input type="email" name="email" placeholder="Adresse e-mail" required />
+                <input type="password" name="password" placeholder="Mot de passe" required />
+                <button type="submit" class="btn-primary full-width">Se connecter</button>
+              </form>
+            </div>
+          </section>
+          
+        <main>
+        </main>
 </body>
 </html>
+
