Added Sign in and Sign up

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Bayatni.tn</title>
-    <link rel="stylesheet" href="css/landing.css"> 
+    <link rel="stylesheet" href="Assets/css/index.css"> 
     <script src="https://cdn.tailwindcss.com"></script> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,11 +13,10 @@
 </head>
 <body>
         <header class="flex justify-between items-center z-10">
-            <div class="text-2xl font-bold">Bayatni.tn</div>
+            <a href="index.html"><div class="text-2xl font-bold">Bayatni.tn</div></a>
             <nav class="space-x-2">
-                <button type="button" class="btn btn-light">Sign up</button>
-                <button type="button" class="btn btn-primary">Log in</button>
-
+                <a href="signup.html"><button type="button" class="widget-btn-inverse">S'inscrire</button></a>
+                <a href="signin.html"><button type="button" class="widget-btn">S'identifier</button></a>
             </nav>
         </header>
 
@@ -26,7 +25,7 @@
                 <h1 class="title">Bayatni</h1>
                 <p class="bio">Bienvenue sur Bayatni.tn,</br>Votre plateforme de réservation d’agenda en ligne dédiée aux hôtels en Tunisie.</br></p>
             </div>
-            <button class="widget-btn">Booking</button>
+            <button class="widget-btn">Réserver</button>
         </main>
 </body>
 </html>
