--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -3,7 +3,8 @@
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Bayatni.tn</title>
-    <link rel="stylesheet" href="css/login.css"> 
+    <link rel="stylesheet" href="Assets/css/index.css">
+    <link rel="stylesheet" href="Assets/css/signin.css"> 
     <script src="https://cdn.tailwindcss.com"></script> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,23 +13,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 </head>
 <body>
-        <header class="flex justify-between items-center z-10">
-            <div class="text-2xl font-bold">Bayatni.tn</div>
-        </header>
-
-        <section class="auth-section">
+    <header class="flex justify-between items-center z-10">
+        <a href="index.html"><div class="text-2xl font-bold">Bayatni.tn</div></a>
+        <nav class="space-x-2">
+            <a href="signin.html"><button type="button" class="widget-btn">S'identifier</button></a>
+        </nav>
+    </header>
+        <main class="flex-grow flex items-center justify-center">
             <div class="auth-card">
-              <h1>Connexion</h1>
-              <form action="/login" method="POST">
-                <input type="email" name="email" placeholder="Adresse e-mail" required />
-                <input type="password" name="password" placeholder="Mot de passe" required />
-                <button type="submit" class="btn-primary full-width">Se connecter</button>
-              </form>
+                <form id="signupForm">
+                    <iframe  id="myIframe" src="form1.html" allowfullscreen="true"  height="250px" width="330px" style=" background-color: transparent;" ></iframe>
+                    <button type="submit" onclick="nextform()" class="widget-btn w-full py-2 mt-4">Next</button>
+                    <p id="confirmationMessage" class="confirmation-message"></p>
+                </form>
             </div>
-          </section>
-          
-        <main>
         </main>
+        
+        <script src="Assets/js/signup.js"></script>
 </body>
 </html>
 
