--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -4,7 +4,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Bayatni.tn</title>
     <link rel="stylesheet" href="Assets/css/index.css">
-    <link rel="stylesheet" href="Assets/css/signin.css"> 
+    <link rel="stylesheet" href="Assets/css/signup.css"> 
     <script src="https://cdn.tailwindcss.com"></script> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,13 +19,13 @@
             <a href="signin.html"><button type="button" class="widget-btn">S'identifier</button></a>
         </nav>
     </header>
+
+
         <main class="flex-grow flex items-center justify-center">
             <div class="auth-card">
-                <form id="signupForm">
-                    <iframe  id="myIframe" src="form1.html" allowfullscreen="true"  height="250px" width="330px" style=" background-color: transparent;" ></iframe>
-                    <button type="submit" onclick="nextform()" class="widget-btn w-full py-2 mt-4">Next</button>
-                    <p id="confirmationMessage" class="confirmation-message"></p>
-                </form>
+                <iframe  id="myIframe" src="form1.html" allowfullscreen="true"  height="250px" width="450px" style=" background-color: transparent;" ></iframe>
+                <button type="submit" onclick="nextform()" class="button-submit">Next</button>
+                <p id="confirmationMessage" class="confirmation-message"></p>
             </div>
         </main>
         
