--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -23,9 +23,7 @@
 
         <main class="flex-grow flex items-center justify-center">
             <div class="auth-card">
-                <iframe  id="myIframe" src="form1.html" allowfullscreen="true"  height="250px" width="450px" style=" background-color: transparent;" ></iframe>
-                <button type="submit" onclick="nextform()" class="button-submit">Next</button>
-                <p id="confirmationMessage" class="confirmation-message"></p>
+                <iframe  id="myIframe" src="form1.html" allowfullscreen="true" width="500px" height="400px" style=" background-color: transparent;" ></iframe>
             </div>
         </main>
         
