--- a/Frontend/form3.html
+++ b/Frontend/form3.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="Assets/css/index.css">
-  <link rel="stylesheet" href="Assets/css/signin.css">
-  <link rel="stylesheet" href="Assets/css/signup.css">
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
-  <style>
-    html, body {
-      background-color: transparent;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Assets/css/index.css">
+    <link rel="stylesheet" href="Assets/css/signin.css">
+    <link rel="stylesheet" href="Assets/css/signup.css">
+    <script src="https://cdn.tailwindcss.com"></script> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <style>
+        html, body {
+          background-color: transparent;
+        }
+      </style>
 </head>
-<body>
-  <form class="form">
-    <div class="flex-column"><label>Nom Complet</label></div>
-    <div class="inputForm">
-      <input type="text" class="input" placeholder="Nom Complet" required>
+<body>  
+  <div class="flex flex-col justify-around bg-transparent p-4 border border-white border-opacity-30 rounded-lg shadow-md max-w-xs mx-auto">
+    div class="flex flex-row items-center justify-between mb-3">
+      <input class="w-full h-10 border-b border-white text-sm bg-transparent text-white placeholder-white caret-orange-500 pl-2 focus:outline-none focus:border-blue-500 focus:shadow-[0_2px_10px_#5891ff] transition" type="text" name="cardName" id="cardName" placeholder="Full Name" />
+        <div class="flex items-center justify-center relative w-14 h-9 border border-white border-opacity-20 rounded-md ml-2">
+          <svg class="text-white fill-current" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 48 48"><path fill="#ff9800" d="M32 10A14 14 0 1 0 32 38A14 14 0 1 0 32 10Z"></path><path fill="#d50000" d="M16 10A14 14 0 1 0 16 38A14 14 0 1 0 16 10Z"></path><path fill="#ff3d00" d="M18,24c0,4.755,2.376,8.95,6,11.48c3.624-2.53,6-6.725,6-11.48s-2.376-8.95-6-11.48C20.376,15.05,18,19.245,18,24z"></path></svg>
+        </div>
+        </div>
+        <div class="flex flex-col space-y-3">
+          <input class="w-full h-10 border-b border-white text-sm bg-transparent text-white placeholder-white caret-orange-500 pl-2 focus:outline-none focus:border-blue-500 focus:shadow-[0_2px_10px_#5891ff] transition" type="text" name="cardNumber" id="cardNumber" placeholder="0000 0000 0000 0000" />
+          <div class="flex flex-row space-x-2">
+            <input class="w-full h-10 border-b border-white text-sm bg-transparent text-white placeholder-white caret-orange-500 pl-2 focus:outline-none focus:border-blue-500 focus:shadow-[0_2px_10px_#5891ff] transition" type="text" name="expiryDate" id="expiryDate" placeholder="MM/AA" />
+            <input class="w-full h-10 border-b border-white text-sm bg-transparent text-white placeholder-white caret-orange-500 pl-2 focus:outline-none focus:border-blue-500 focus:shadow-[0_2px_10px_#5891ff] transition" type="text" name="cvv" id="cvv" placeholder="CVV" />
+        </div>
     </div>
-    <div class="flex-column"><label>Adresse Email</label></div>
-    <div class="inputForm">
-      <input type="text" class="input" placeholder="Entrez votre Adresse Email" required>
-    </div>
-    <div class="flex-column"><label>Mot de passe</label></div>
-    <div class="inputForm">
-      <input type="password" class="input" name="password" placeholder="Mot de passe" required >
-    </div>
-    <div class="inputForm">
-      <input type="password" name="confirm_password" placeholder="Confirmation de Mdp" required />
-    </div>
-  </form>
+  </div>
 </body>
 </html>
