--- a/Frontend/form1.html
+++ b/Frontend/form1.html
@@ -3,44 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="Assets/css/index.css">
   <link rel="stylesheet" href="Assets/css/signup.css">
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
-  <style>
+    <!-- TAILWIND CDN -->
+    <script src="https://cdn.tailwindcss.com"></script> 
+    <!-- Bootstrap CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous"> 
+    <!-- Google Fonts CDN -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">  <style>
     html, body {
       background-color: transparent;
     }
   </style>
 </head>
 <body>
+
   <form class="form">
-    <div class="flex-column">
-      <label for="nom">Nom</label>
+    <div class="inputForm">
+      <input type="text" id="nom" name="nom" placeholder="Votre nom" required>
     </div>
     <div class="inputForm">
-      <input type="text" id="nom" name="nom" class="input" placeholder="Votre nom" required>
-    </div>
-    <div class="flex-column">
-      <label for="prenom">Prénom</label>
+      <input type="text" id="prenom" name="prenom" placeholder="Votre prénom" required>
     </div>
     <div class="inputForm">
-      <input type="text" id="prenom" name="prenom" class="input" placeholder="Votre prénom" required>
+      <input type="date" id="birthday" name="birthday"required>
     </div>
-    <div class="flex-column">
-      <label for="birthday">Birthday</label>
-    </div>
-    <div class="inputForm">
-      <input type="date" id="birthday" name="birthday" class="input" required>
-    </div>
+    <div class="inputSubmit">
     <button type="submit" onclick="myFunction()" class="button-submit">Next</button>
+    </div>
   </form>
   <script>
-    function myFunction() {
-        window.location.href = 'form2.html';
-    }
-</script>
+      function myFunction() {
+          window.location.href = 'form2.html';
+      }
+  </script>
 </body>
 </html>
