--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -4,14 +4,16 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Bayatni.tn</title>
     <link rel="stylesheet" href="Assets/css/index.css">
-    <link rel="stylesheet" href="Assets/css/signup.css"> 
+    <link rel="stylesheet" href="Assets/css/signin.css"> 
+    <!-- TAILWIND CDN -->
     <script src="https://cdn.tailwindcss.com"></script> 
+    <!-- Bootstrap CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous"> 
+    <!-- Google Fonts CDN -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-</head>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"></head>
 <body>
     <header class="flex justify-between items-center z-10">
         <a href="index.html"><div class="text-2xl font-bold">Bayatni.tn</div></a>
@@ -23,11 +25,11 @@
 
         <main class="flex-grow flex items-center justify-center">
             <div class="auth-card">
-                <iframe  id="myIframe" src="form1.html" allowfullscreen="true" width="500px" height="400px" style=" background-color: transparent;" ></iframe>
+                <iframe  id="myIframe" src="form1.html" allowfullscreen="true" width="450px" height="360px" style=" background-color: transparent;" ></iframe>
             </div>
+            
         </main>
-        
-        <script src="Assets/js/signup.js"></script>
+        <script src="Assets/js/background.js"></script>
 </body>
 </html>
 
