--- a/Frontend/form1.html
+++ b/Frontend/form1.html
@@ -31,7 +31,7 @@
       <input type="date" id="birthday" name="birthday"required>
     </div>
     <div class="inputSubmit">
-    <button type="submit" onclick="myFunction()" class="button-submit">Next</button>
+    <button type="submit" onclick="myFunction()" class="button-submit">Suivant</button>
     </div>
   </form>
   <script>
