--- a/Frontend/form2.html
+++ b/Frontend/form2.html
@@ -21,9 +21,6 @@
 <body>
     <form class="form">
       <div class="inputForm">
-        <input type="text" placeholder="Nom Complet" required>
-      </div>
-      <div class="inputForm">
         <input type="text" placeholder="Entrez votre Adresse Email" required>
       </div>  
       <div class="inputForm">
@@ -32,7 +29,7 @@
       <div class="inputForm">
         <input type="password" name="confirm_password" placeholder="Confirmation de Mdp" required />
       </div>
-      <button type="submit" onclick="myFunction()" class="button-submit">Next</button>
+      <button type="submit" onclick="myFunction()" class="button-submit" style="transform: translate(-75%, 10%);">Suivant</button>
     </form>
     <script>
       function myFunction() {
