--- a/Frontend/signin.html
+++ b/Frontend/signin.html
@@ -40,7 +40,7 @@
                   <span class="forgot-password">Forgot password?</span>
                 </div>                
               <button class="button-submit">Sign In</button>
-              <p class="p">Don't have an account? <span class="span">Sign Up</span></p>
+              <p class="p">Don't have an account? <a href="signup.html"><span class="span">Sign Up</span></p></a>
             </form>
           </section>
   </main>
