--- a/Frontend/form3.html
+++ b/Frontend/form3.html
@@ -17,23 +17,35 @@
         html, body {
           background-color: transparent;
         }
+
+        div{
+          font-family: "Poppins", sans-serif;
+          font-weight: 400;
+          font-style: normal;
+        }
+        form{
+          margin-top: 15px;
+        }
       </style>
 </head>
 <body>  
-  <div class="flex flex-col justify-around bg-transparent p-4 border border-white border-opacity-30 rounded-lg shadow-md max-w-xs mx-auto">
-    <div class="flex flex-row items-center justify-between mb-3">
-      <input class="w-full h-10 border-b border-white text-sm bg-transparent text-white placeholder-white caret-orange-500 pl-2 focus:outline-none focus:border-blue-500 focus:shadow-[0_2px_10px_#5891ff] transition" type="text" name="cardName" id="cardName" placeholder="Full Name" />
-        <div class="flex items-center justify-center relative w-14 h-9 border border-white border-opacity-20 rounded-md ml-2">
-          <svg class="text-white fill-current" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 48 48"><path fill="#ff9800" d="M32 10A14 14 0 1 0 32 38A14 14 0 1 0 32 10Z"></path><path fill="#d50000" d="M16 10A14 14 0 1 0 16 38A14 14 0 1 0 16 10Z"></path><path fill="#ff3d00" d="M18,24c0,4.755,2.376,8.95,6,11.48c3.624-2.53,6-6.725,6-11.48s-2.376-8.95-6-11.48C20.376,15.05,18,19.245,18,24z"></path></svg>
-        </div>
-        </div>
-        <div class="flex flex-col space-y-3">
-          <input class="w-full h-10 border-b border-white text-sm bg-transparent text-white placeholder-white caret-orange-500 pl-2 focus:outline-none focus:border-blue-500 focus:shadow-[0_2px_10px_#5891ff] transition" type="text" name="cardNumber" id="cardNumber" placeholder="0000 0000 0000 0000" />
-          <div class="flex flex-row space-x-2">
-            <input class="w-full h-10 border-b border-white text-sm bg-transparent text-white placeholder-white caret-orange-500 pl-2 focus:outline-none focus:border-blue-500 focus:shadow-[0_2px_10px_#5891ff] transition" type="text" name="expiryDate" id="expiryDate" placeholder="MM/AA" />
-            <input class="w-full h-10 border-b border-white text-sm bg-transparent text-white placeholder-white caret-orange-500 pl-2 focus:outline-none focus:border-blue-500 focus:shadow-[0_2px_10px_#5891ff] transition" type="text" name="cvv" id="cvv" placeholder="CVV" />
-        </div>
+  <form>
+    <div id="CC" class="flex flex-col justify-around bg-transparent p-4 border border-white border-opacity-30 rounded-lg shadow-md max-w-xs mx-auto">
+      <div class="flex flex-row items-center justify-between mb-3">
+        <input class="w-full h-10 border-b border-white text-sm bg-transparent text-white placeholder-white caret-orange-500 pl-2 focus:outline-none focus:border-blue-500 focus:shadow-[0_2px_10px_#5891ff] transition" type="text" name="cardName" id="cardName" placeholder="Full Name" />
+          <div class="flex items-center justify-center relative w-14 h-9 border border-white border-opacity-20 rounded-md ml-2">
+            <svg class="text-white fill-current" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 48 48"><path fill="#ff9800" d="M32 10A14 14 0 1 0 32 38A14 14 0 1 0 32 10Z"></path><path fill="#d50000" d="M16 10A14 14 0 1 0 16 38A14 14 0 1 0 16 10Z"></path><path fill="#ff3d00" d="M18,24c0,4.755,2.376,8.95,6,11.48c3.624-2.53,6-6.725,6-11.48s-2.376-8.95-6-11.48C20.376,15.05,18,19.245,18,24z"></path></svg>
+          </div>
+          </div>
+          <div class="flex flex-col space-y-3">
+            <input class="w-full h-10 border-b border-white text-sm bg-transparent text-white placeholder-white caret-orange-500 pl-2 focus:outline-none focus:border-blue-500 focus:shadow-[0_2px_10px_#5891ff] transition" type="text" name="cardNumber" id="cardNumber" placeholder="0000 0000 0000 0000" />
+            <div class="flex flex-row space-x-2">
+              <input class="w-full h-10 border-b border-white text-sm bg-transparent text-white placeholder-white caret-orange-500 pl-2 focus:outline-none focus:border-blue-500 focus:shadow-[0_2px_10px_#5891ff] transition" type="text" name="expiryDate" id="expiryDate" placeholder="MM/AA" />
+              <input class="w-full h-10 border-b border-white text-sm bg-transparent text-white placeholder-white caret-orange-500 pl-2 focus:outline-none focus:border-blue-500 focus:shadow-[0_2px_10px_#5891ff] transition" type="text" name="cvv" id="cvv" placeholder="CVV" />
+          </div>
+      </div>
     </div>
-  </div>
+    <button type="submit" onclick="myFunction()" class="button-submit" id="CC">Finaliser</button>
+  </form>
 </body>
 </html>
