--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -12,24 +12,34 @@
     <!-- Google Fonts CDN -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"></head>
-<body>
-        <header class="flex justify-between items-center z-10">
-            <a href="index.html"><div class="text-2xl font-bold">Bayatni.tn</div></a>
-            <nav class="space-x-2">
-                <a href="signup.html"><button type="button" class="widget-btn-inverse">S'inscrire</button></a>
-                <a href="signin.html"><button type="button" class="widget-btn">S'identifier</button></a>
-            </nav>
-        </header>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-        <main>
-            <div class="intro">
-                <h1 class="title">Bayatni</h1>
-                <p class="bio">Bienvenue sur Bayatni.tn,</br>Votre plateforme de réservation d’agenda en ligne dédiée aux hôtels en Tunisie.</br></p>
-            </div>
-            <button class="widget-btn">Réserver</button>
-        </main>
+    <!-- Leaflet Maps CDN -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+    crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="crossorigin=""></script>
+</head>
+<body>
+    <header class="flex justify-between items-center z-10">
+        <a href="index.html"><div class="text-2xl font-bold">Bayatni.tn</div></a>
+        <nav class="space-x-2">
+            <a href="signup.html"><button type="button" class="widget-btn-inverse">S'inscrire</button></a>
+            <a href="signin.html"><button type="button" class="widget-btn">S'identifier</button></a>
+        </nav>
+    </header>
+
+    <main>
+        <div class="intro">
+            <h1 class="title">Bayatni</h1>
+            <p class="bio">Bienvenue sur Bayatni.tn,</br>Votre plateforme de réservation d’agenda en ligne dédiée aux hôtels en Tunisie.</br></p>
+        </div>
+        <button class="widget-btn">Réserver</button>
+        
+    </main>
+    <div id="map"></div>
     <script src="Assets/js/background.js"></script>
+    <script src="Assets/js/locate.js"></script>
 </body>
 </html>
 
