--- a/Frontend/form2.html
+++ b/Frontend/form2.html
@@ -4,38 +4,112 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="Assets/css/signup.css">
-    <!-- TAILWIND CDN -->
-    <script src="https://cdn.tailwindcss.com"></script> 
-    <!-- Bootstrap CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous"> 
-    <!-- Google Fonts CDN -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> <style>
+  <script src="https://cdn.tailwindcss.com"></script> 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"> 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Poppins&display=swap" rel="stylesheet"> 
+  <style>
     html, body {
       background-color: transparent;
+    }
+    .error {
+      color: red;
+      font-size: 0.8rem;
     }
   </style>
 </head>
 <body>
-    <form class="form">
-      <div class="inputForm">
-        <input type="text" placeholder="Entrez votre Adresse Email" required>
-      </div>  
-      <div class="inputForm">
-        <input type="password" name="password" placeholder="Mot de passe" required >
-      </div>
-      <div class="inputForm">
-        <input type="password" name="confirm_password" placeholder="Confirmation de Mdp" required />
-      </div>
-      <button type="submit" onclick="myFunction()" class="button-submit" style="transform: translate(-75%, 10%);">Suivant</button>
-    </form>
-    <script>
-      function myFunction() {
-          window.location.href = 'form3.html';
+  <form class="form">
+    <div class="inputForm">
+      <input type="text" id="email" placeholder="Entrez votre Adresse Email" required>
+      <div id="error-email" class="error"></div>
+    </div>  
+    <div class="inputForm">
+      <input type="password" id="password" placeholder="Mot de passe" required>
+      <div id="error-password" class="error"></div>
+    </div>
+    <div class="inputForm">
+      <input type="password" id="confirm_password" placeholder="Confirmation de Mdp" required>
+      <div id="error-confirm" class="error"></div>
+    </div>
+    <button type="submit" class="button-submit" style="transform: translate(-75%, 10%);">Suivant</button>
+  </form>
+
+  <script>
+    const emailInput = document.getElementById("email");
+    const passwordInput = document.getElementById("password");
+    const confirmInput = document.getElementById("confirm_password");
+  
+    const emailError = document.getElementById("error-email");
+    const passwordError = document.getElementById("error-password");
+    const confirmError = document.getElementById("error-confirm");
+  
+    const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+  
+    function validateEmail() {
+      const email = emailInput.value.trim();
+      if (!emailRegex.test(email)) {
+        styleInput(emailInput, false);
+        return false;
+      } else {
+        emailError.textContent = "";
+        styleInput(emailInput, true);
+        return true;
       }
-    </script>
+    }
+  
+    function validatePassword() {
+      const password = passwordInput.value;
+      if (password.length < 6) {
+        styleInput(passwordInput, false);
+        return false;
+      } else {
+        passwordError.textContent = "";
+        styleInput(passwordInput, true);
+        return true;
+      }
+    }
+  
+    function validateConfirmPassword() {
+      const password = passwordInput.value;
+      const confirmPassword = confirmInput.value;
+      if (password !== confirmPassword) {
+        styleInput(confirmInput, false);
+        return false;
+      } else {
+        confirmError.textContent = "";
+        styleInput(confirmInput, true);
+        return true;
+      }
+    }
+  
+    function styleInput(inputElement, isValid) {
+      const wrapper = inputElement.parentElement;
+      wrapper.style.border = isValid ? "1px solid green" : "1px solid red";
+      wrapper.style.boxShadow = isValid ? "0 5px 30px green" : "0 5px 30px red";
+    }
+  
+    emailInput.addEventListener("input", validateEmail);
+    passwordInput.addEventListener("input", () => {
+      validatePassword();
+      validateConfirmPassword();
+    });
+    confirmInput.addEventListener("input", validateConfirmPassword);
+  
+    document.querySelector('.form').addEventListener('submit', function (event) {
+      event.preventDefault();
+  
+      const emailValid = validateEmail();
+      const passwordValid = validatePassword();
+      const confirmValid = validateConfirmPassword();
+  
+      if (emailValid && passwordValid && confirmValid) {
+        window.location.href = 'form3.html';
+      }
+    });
+  </script>
+  
 </body>
 </html>
-
