Applied changes to css

--- a/Frontend/form1.html
+++ b/Frontend/form1.html
@@ -68,8 +68,8 @@
   
         isValid = isValid && value.length > 0;
   
-        parentBox.style.border = isValid ? "1px solid green" : "1px solid red";
-        parentBox.style.boxShadow = isValid ? "0 5px 30px green" : "0 5px 30px red";
+        parentBox.style.border = isValid ? "1px solid black" : "1px solid red";
+        parentBox.style.boxShadow = isValid ? "0 10px 30px black" : "0 5px 30px red";
         
         return isValid;
       }
@@ -103,8 +103,8 @@
   
         const isValid = age >= 18;
   
-        parentBox.style.border = isValid ? "1px solid green" : "1px solid red";
-        parentBox.style.boxShadow = isValid ? "0 5px 30px green" : "0 5px 30px red";
+        parentBox.style.border = isValid ? "1px solid black" : "1px solid red";
+        parentBox.style.boxShadow = isValid ? "0 10px 30px black" : "0 5px 30px red";
         return isValid;
       }
   
