--- a/Frontend/form2.html
+++ b/Frontend/form2.html
@@ -87,8 +87,8 @@
   
     function styleInput(inputElement, isValid) {
       const wrapper = inputElement.parentElement;
-      wrapper.style.border = isValid ? "1px solid green" : "1px solid red";
-      wrapper.style.boxShadow = isValid ? "0 5px 30px green" : "0 5px 30px red";
+      wrapper.style.border = isValid ? "1px solid black" : "1px solid red";
+      wrapper.style.boxShadow = isValid ? "0 10px 30px black" : "0 5px 30px red";
     }
   
     emailInput.addEventListener("input", validateEmail);
