--- a/Frontend/form3.html
+++ b/Frontend/form3.html
@@ -49,7 +49,7 @@
           </div>
       </div>
     </div>
-    <button type="submit" onclick="myFunction()" class="button-submit" id="CC">Finaliser</button>
+    <button type="submit" onclick="myFunction()" class="button-submit" id="FF">Finaliser</button>
   </form>
   <script>
     const cardName = document.getElementById('cardName');
@@ -90,8 +90,8 @@
   
     function styleInput(input, isValid) {
       const parent = input;
-      parent.style.border = isValid ? '1px solid green' : '1px solid red';
-      parent.style.boxShadow = isValid ? '0 5px 30px green' : '0 5px 30px red';
+      parent.style.border = isValid ? '1px solid black' : '1px solid red';
+      parent.style.boxShadow = isValid ? '0 10px 30px black' : '0 5px 30px red';
     }
   
     cardName.addEventListener('input', validateName);
