--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -19,8 +19,15 @@
     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
     crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="crossorigin=""></script>
+
 </head>
 <body>
+    <div id="background-container">
+        <div class="bg-layer" id="bg1"></div>
+        <div class="bg-layer" id="bg2"></div>
+    </div>
+
+
     <header class="flex justify-between items-center z-10">
         <a href="index.html"><div class="text-2xl font-bold">Bayatni.tn</div></a>
         <nav class="space-x-2">
