--- a/Frontend/signin.html
+++ b/Frontend/signin.html
@@ -15,12 +15,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"></head>
 <body>
+
+
+  <div id="background-container">
+    <div class="bg-layer" id="bg1"></div>
+    <div class="bg-layer" id="bg2"></div>
+</div>
+
   <header class="flex justify-between items-center z-10">
     <a href="index.html"><div class="text-2xl font-bold">Bayatni.tn</div></a>
     <nav class="space-x-2">
         <a href="signup.html"><button type="button" class="widget-btn-inverse">S'inscrire</button></a>
     </nav>
-</header>
+  </header>
         <main>
           <section class="auth-card">
             <form class="form">
