--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -15,6 +15,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"></head>
 <body>
+
+    <div id="background-container">
+        <div class="bg-layer" id="bg1"></div>
+        <div class="bg-layer" id="bg2"></div>
+    </div>
+
     <header class="flex justify-between items-center z-10">
         <a href="index.html"><div class="text-2xl font-bold">Bayatni.tn</div></a>
         <nav class="space-x-2">
@@ -22,14 +28,13 @@
         </nav>
     </header>
 
-
-        <main class="flex-grow flex items-center justify-center">
-            <div class="auth-card">
-                <iframe  id="myIframe" src="form1.html" allowfullscreen="true" width="450px" height="450px" style=" background-color: transparent;" ></iframe>
-            </div>
+    <main class="flex-grow flex items-center justify-center">
+        <div class="auth-card">
+            <iframe  id="myIframe" src="form1.html" allowfullscreen="true" width="450px" height="340px" style=" background-color: transparent;" ></iframe>
+        </div>
             
-        </main>
-        <script src="Assets/js/background.js"></script>
+    </main>
+    <script src="Assets/js/background.js"></script>
 
 </body>
 </html>
