--- a/Frontend/form1.html
+++ b/Frontend/form1.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-  <form class="form">
+  <form class="form" method="post" action="signup.php">
     <div class="inputForm">
       <input type="text" id="nom" name="nom" placeholder="Votre nom" required>
     </div>
