--- a/Frontend/form2.html
+++ b/Frontend/form2.html
@@ -19,9 +19,9 @@
   </style>
 </head>
 <body>
-    <form class="form">
+    <form class="form" method="post" action="signup.php">
       <div class="inputForm">
-        <input type="text" placeholder="Entrez votre Adresse Email" required>
+        <input type="text" name="email" placeholder="Entrez votre Adresse Email" required>
       </div>  
       <div class="inputForm">
         <input type="password" name="password" placeholder="Mot de passe" required >
