--- a/Frontend/form3.html
+++ b/Frontend/form3.html
@@ -29,7 +29,7 @@
       </style>
 </head>
 <body>  
-  <form>
+  <form action="signup.php" method="post">
     <div id="CC" class="flex flex-col justify-around bg-transparent p-4 border border-white border-opacity-30 rounded-lg shadow-md max-w-xs mx-auto">
       <div class="flex flex-row items-center justify-between mb-3">
         <input class="w-full h-10 border-b border-white text-sm bg-transparent text-white placeholder-white caret-orange-500 pl-2 focus:outline-none focus:border-blue-500 focus:shadow-[0_2px_10px_#5891ff] transition" type="text" name="cardName" id="cardName" placeholder="Full Name" />
