Sign up working

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h1 class="title">Bayatni</h1>
             <p class="bio">Bienvenue sur Bayatni.tn,</br>Votre plateforme de réservation d’agenda en ligne dédiée aux hôtels en Tunisie.</br></p>
         </div>
-        <a href="book.html"><button class="widget-btn">Réserver</button></a>
+        <a href="booking.html"><button class="widget-btn">Réserver</button></a>
         
     </main>
     <div id="map"></div>
