Added User sign up , sign up , signout

--- a/booking.html
+++ b/booking.html
@@ -107,7 +107,7 @@
 
     </main>
     <script src="Assets/js/book.js"></script>
-    <script src="Assets/js/background.js"></script>
+    <script src="Assets/js/bg.js"></script>
 </body>
 </html>
 
