--- a/booking.html
+++ b/booking.html
@@ -29,10 +29,10 @@
 
 
     <header class="flex justify-between items-center z-10">
-        <a href="index.html"><div class="text-2xl font-bold">Bayatni.tn</div></a>
+        <a href="index.php"><div id="domain">Bayatni.tn</div></a>
         <nav class="space-x-2">
-            <a href="signup.php"><button type="button" class="widget-btn-inverse">S'inscrire</button></a>
-            <a href="signin.html"><button type="button" class="widget-btn">S'identifier</button></a>
+            <a href="signup.php"><button type="button" class="nav-btn-inverse">S'inscrire</button></a>
+            <a href="signin.php"><button type="button" class="nav-btn">S'identifier</button></a>
         </nav>
     </header>
 
@@ -40,7 +40,7 @@
         <div class="reservation-container">
             
             <div class="search-box">
-                <input type="text" id="hotel-search" class="search-input" placeholder="Réservez votre prochain séjour ici">
+                <input type="text" id="hotel-search" class="search-input" placeholder="Trouvez votre prochain hotel">
             </div>
             
             <div class="filter-section">
@@ -107,7 +107,7 @@
 
     </main>
     <script src="Assets/js/book.js"></script>
-    <script src="Assets/js/background.js"></script>
+    <script src="Assets/js/bg.js"></script>
 </body>
 </html>
 
